--- a/apps/chatapp/package.json
+++ b/apps/chatapp/package.json
@@ -11,18 +11,21 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
+    "@tailwindcss/postcss": "^4.0.6",
+    "axios": "^1.8.4",
     "next": "^15.2.1",
+    "postcss": "^8.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "@tailwindcss/postcss": "^4.0.6",
-    "postcss": "^8.5.2",
-    "tailwindcss": "^4.0.6",
-    "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1"
+    "react-hook-form": "^7.55.0",
+    "remixicon": "^4.6.0",
+    "sonner": "^2.0.3",
+    "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
-    "@cma/types": "*",
     "@cma/eslint-config": "*",
+    "@cma/types": "*",
     "@cma/typescript-config": "*",
     "@types/node": "^22.13.9",
     "@types/react": "19.0.10",
