--- a/apps/chatapp/package.json
+++ b/apps/chatapp/package.json
@@ -19,6 +19,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
+    "react-markdown": "^10.1.0",
     "remixicon": "^4.6.0",
     "sonner": "^2.0.3",
     "tailwindcss": "^4.0.6"
