⛁ db: migrate db to postgres(docker)

--- a/packages/db/.env.example
+++ b/packages/db/.env.example
@@ -1,2 +1,2 @@
-
-DATABASE_URL=
+# docker-postgres(local) connection string
+DATABASE_URL="postgresql://postgres:cmaappadminpassward@localhost:5432/chatAppDB?schema=public"
